syntax = "proto3";

package photo_server;

message ImageRequest {
    bytes image_data = 1;
}

message DetectionResponse {
    bool is_valid = 1;
}

service FaceDetectionService {
    rpc DetectFace(ImageRequest) returns (DetectionResponse);
}
